--- a/src/main/resources/templates/signup1.html
+++ b/src/main/resources/templates/signup1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Additional Information</h1>
-<form action="/info" method="post">
+<form action="/singup1" method="post">
     <label for="info1">Info 1:</label><br>
     <input type="text" id="info1" name="info1"><br>
     <label for="info2">Info 2:</label><br>
