로그인 인증 방식 구(signup1.html)

--- a/src/main/resources/templates/signup1.html
+++ b/src/main/resources/templates/signup1.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 <h1>Additional Information</h1>
-<form action="/singup1" method="post">
-    <label for="info1">Info 1:</label><br>
-    <input type="text" id="info1" name="info1"><br>
-    <label for="info2">Info 2:</label><br>
-    <input type="text" id="info2" name="info2"><br>
+<form action="/signup1" method="post">
+    <label for="picture">picture:</label><br>
+    <input type="text" id="picture" name="picture"><br>
+    <label for="nickname">nickname:</label><br>
+    <input type="text" id="nickname" name="nickname"><br>
     <input type="submit" value="Submit">
 </form>
 </body>
