--- a/src/main/resources/templates/postupload.html
+++ b/src/main/resources/templates/postupload.html
@@ -4,12 +4,10 @@
     <title>Additional Info</title>
 </head>
 <body>
-<h1>Additional Information</h1>
+<h1>게시물 추가</h1>
 <form action="/post/upload" method="post">
-    <label for="author">author:</label><br>
-    <input type="text" id="author" name="author"><br>
     <label for="content">content:</label><br>
-    <input type="text" id="content" name="author"><br>
+    <input type="text" id="content" name="content"><br>
     <label for="title">title:</label><br>
     <input type="text" id="title" name="title"><br>
 
